# cat_gender_detector

./: .cursorignore  .gitignore  Dockerfile  classes.drawio  components_diagram_training (1).drawio  components_diagram_training.drawio  definitions.py  prompts.py  pyproject.toml  requirements.txt  run_complete_pipeline.py  run_etl.py  texts_skipped_log.json  usecase_diagram.drawio
data/: data.yaml
inference/telegram_bot/: bot.py
training/etl/: dataset_manager.py  etl.py  run_training_pipeline.py  training_description_classifier.py  training_image_processor.py
training/etl/reddit/: __init__.py  reddit_parser.py
training/etl/telegram/: __init__.py  telegram_parser.py
training/etl/vk/: vk_parser.py
training/object_detection/: check_not_labeled_files.py  yolo_inference_original.py
